const albums = [
    {
        id: 1,
        title: 'Whatsapp Images',
        selected: false,
        tick: false,
        photos: [
            { id: 1, source: require('../Screens/assets/img10.jpg') },
            { id: 4, source: require('../Screens/assets/img7.jpg') },
            { id: 4, source: require('../Screens/assets/img7.jpg') },
            { id: 2, source: require('../Screens/assets/img.jpg') },
            { id: 2, source: require('../Screens/assets/img.jpg') },
            { id: 2, source: require('../Screens/assets/img.jpg') },
            { id: 3, source: require('../Screens/assets/img2.jpg') },
            { id: 4, source: require('../Screens/assets/img11.jpg') },
            { id: 2, source: require('../Screens/assets/img.jpg') },
            { id: 2, source: require('../Screens/assets/img.jpg') },
            { id: 6, source: require('../Screens/assets/img4.jpg') },
            { id: 5, source: require('../Screens/assets/img3.jpg') },
            { id: 4, source: require('../Screens/assets/img7.jpg') },
            { id: 4, source: require('../Screens/assets/img11.jpg') },

        ]
    },
    {
        id: 2,
        title: 'My Photos',
        selected: false, tick: false,

        photos: [
            { id: 4, source: require('../Screens/assets/img11.jpg') },
            { id: 5, source: require('../Screens/assets/img3.jpg') },
            { id: 5, source: require('../Screens/assets/img3.jpg') },
            { id: 5, source: require('../Screens/assets/img3.jpg') },
            { id: 4, source: require('../Screens/assets/img8.jpg') },
            { id: 4, source: require('../Screens/assets/img7.jpg') },
            { id: 4, source: require('../Screens/assets/img7.jpg') },
            { id: 4, source: require('../Screens/assets/img7.jpg') },
            { id: 4, source: require('../Screens/assets/img7.jpg') },
            { id: 4, source: require('../Screens/assets/img8.jpg') },
            { id: 4, source: require('../Screens/assets/img8.jpg') },
            { id: 6, source: require('../Screens/assets/img4.jpg') }
        ]
    },
    {
        id: 3,
        title: 'Camera',
        selected: false, tick: false,

        photos: [
            { id: 4, source: require('../Screens/assets/img7.jpg') },
            { id: 5, source: require('../Screens/assets/img5.jpg') },
            { id: 5, source: require('../Screens/assets/img3.jpg') },
            { id: 5, source: require('../Screens/assets/img3.jpg') },
            { id: 5, source: require('../Screens/assets/img9.jpg') },
            { id: 5, source: require('../Screens/assets/img9.jpg') },
            { id: 4, source: require('../Screens/assets/img7.jpg') },
            { id: 6, source: require('../Screens/assets/img6.jpg') }
        ]
    },
    {
        id: 4,
        title: 'downloads',
        selected: false, tick: false,

        photos: [
            { id: 4, source: require('../Screens/assets/Splashbg.jpeg') },
            { id: 4, source: require('../Screens/assets/img8.jpg') },
            { id: 5, source: require('../Screens/assets/img9.jpg') },
            { id: 5, source: require('../Screens/assets/backgroundimg.png') },
            { id: 5, source: require('../Screens/assets/backgroundimg.png') },
            { id: 6, source: require('../Screens/assets/img4.jpg') }
        ]
    },
    {
        id: 5,
        title: 'ScreenShots',
        selected: false, tick: false,

        photos: [
            { id: 4, source: require('../Screens/assets/Splashbg.jpeg') },
            { id: 5, source: require('../Screens/assets/backgroundimg.png') },
            { id: 6, source: require('../Screens/assets/backgroundimg.png') }
        ]
    },
    {
        id: 6,
        title: 'Others',
        selected: false, tick: false,

        photos: [
            { id: 4, source: require('../Screens/assets/Splashbg.jpeg') },
            { id: 5, source: require('../Screens/assets/backgroundimg.png') },
            { id: 6, source: require('../Screens/assets/backgroundimg.png') }
        ]
    }
];
export default albums